--- a/template.ejs
+++ b/template.ejs
@@ -380,7 +380,7 @@
 
         .witness-box {
             width: 200px;
-            height: 150px;
+            height: 100px;
             border: 2px solid black;
             margin-bottom: 10px;
         }
@@ -2041,13 +2041,13 @@
                             Signed by the within named
                         </div>
                         <div class="f3item2 greentext">
-                            (name of the Testator)
+                            <%=details.name%>
                         </div>
                     </div>
 
                     <div class="fcontainer4">
                         <div class="f4item1 greentext">
-                            Signature of (testator's name)
+                            Signature of <%=details.name%>
                         </div>
                         <div class="f4item2 greytext">
                             Tip: Make sure that you and both witnesses will sign the will at
