--- a/template.ejs
+++ b/template.ejs
@@ -426,7 +426,7 @@
                         </div>
                         <div class="class2">
                             <!-- <div class="item4"> -->
-                            <img src="img.png" alt="fgdbr" class="imageofuser">
+                            <img src="<%=details.pic%>" alt="fgdbr" class="imageofuser">
                             <!-- </div> -->
                         </div>
                     </div>
