--- a/template.ejs
+++ b/template.ejs
@@ -2120,7 +2120,7 @@
 
                     <div class="fcontainer8">
                         <div class="f8item1">
-                            <img src="" alt="">
+                            <img src="<%=details.qr%>" alt="">
                         </div>
                         <div class="f8item2 greytext">
                             Tip: Once all 3 signatures are done, scan this QR code. You will be taken to a page on
