--- a/template.ejs
+++ b/template.ejs
@@ -1796,7 +1796,7 @@
                             var guard1passport = document.getElementById("guard1passport").innerHTML;
                        
 
-                            if (guard1name.length > 0) {
+                            if (guard1name.length > 0 && document.getElementById("guard1name").innerHTML.trim()!=="") {
 
                                 var xyz = document.getElementById("guard1");
 
