--- a/template.ejs
+++ b/template.ejs
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Inter;
             font-size: 14px;
         }
 
