--- a/template.ejs
+++ b/template.ejs
@@ -386,7 +386,7 @@
         }
 
         .witness-details {
-            text-align: center;
+            text-align: left;
         }
     </style>
 
@@ -2078,14 +2078,14 @@
                                 <!-- Witness 1 Box -->
                             </div>
                             <div class="witness-details">
-                                <h3>Witness 1</h3>
-                                <h3>Name:</h3>
+                                <h4>Witness 1</h4>
+                                <h4>Name:</h4>
                                 <p>
                                 <div class="f10item1">
                                     <!-- Content here -->
                                 </div>
                                 </p>
-                                <h3>Aadhaar/Passport Number:</h3>
+                                <h4>Aadhaar/Passport Number:</h4>
                                 <p>
                                 <div class="f10item1">
                                     <!-- Content here -->
@@ -2098,15 +2098,15 @@
                                 <!-- Witness 2 Box -->
                             </div>
                             <div class="witness-details">
-                                <h3>Witness 2</h3>
-                                <h3>Name:</h3>
+                                <h4>Witness 2</h4>
+                                <h4>Name:</h4>
                                 <p>
                                 <div class="f10item1">
                                     <!-- Content here -->
                                 </div>
                                 </p>
 
-                                <h3>Aadhaar/Passport Number:</h3>
+                                <h4>Aadhaar/Passport Number:</h4>
                                 <p>
                                 <div class="f10item1">
                                     <!-- Content here -->
