--- a/template.ejs
+++ b/template.ejs
@@ -375,7 +375,7 @@
         .witness-container {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: left;
         }
 
         .witness-box {
@@ -2078,14 +2078,14 @@
                                 <!-- Witness 1 Box -->
                             </div>
                             <div class="witness-details">
-                                <h4>Witness 1</h4>
-                                <h4>Name:</h4>
+                                <h5>Witness 1</h5>
+                                <h5>Name:</h5>
                                 <p>
                                 <div class="f10item1">
                                     <!-- Content here -->
                                 </div>
                                 </p>
-                                <h4>Aadhaar/Passport Number:</h4>
+                                <h5>Aadhaar/Passport Number:</h5>
                                 <p>
                                 <div class="f10item1">
                                     <!-- Content here -->
@@ -2098,15 +2098,15 @@
                                 <!-- Witness 2 Box -->
                             </div>
                             <div class="witness-details">
-                                <h4>Witness 2</h4>
-                                <h4>Name:</h4>
+                                <h5>Witness 2</h5>
+                                <h5>Name:</h5>
                                 <p>
                                 <div class="f10item1">
                                     <!-- Content here -->
                                 </div>
                                 </p>
 
-                                <h4>Aadhaar/Passport Number:</h4>
+                                <h5>Aadhaar/Passport Number:</h5>
                                 <p>
                                 <div class="f10item1">
                                     <!-- Content here -->
